libs/parser/testdata/errors/at_double_symbol.csl
# Test rejection of double @@
host: @@configs:db.host
